# master-thesis

./: .gitignore  LICENSE  README.md  demo.ipynb  pyproject.toml  requirements.txt  setup.py
bnn/: abstract.py  bnn_svgd.py  bnn_vi.py  utils.py
configs/ant/: fsvgd.yaml  fvi.yaml  mlp.yaml  svgd.yaml  vi.yaml
configs/densities/: fsvgd.yaml  fvi.yaml  mlp.yaml  svgd.yaml  vi.yaml
configs/half_cheetah/: fsvgd.yaml  fvi.yaml  mlp.yaml  svgd.yaml  vi.yaml
configs/hopper/: fsvgd.yaml  fvi.yaml  mlp.yaml  svgd.yaml  vi.yaml
configs/inverted_double_pendulum/: fsvgd.yaml  fvi.yaml  mlp.yaml  svgd.yaml  vi.yaml
configs/inverted_pendulum/: fsvgd.yaml  fvi.yaml  mlp.yaml  svgd.yaml  vi.yaml
configs/reacher/: fsvgd.yaml  fvi.yaml  mlp.yaml  svgd.yaml  vi.yaml
configs/swimmer/: fsvgd.yaml  fvi.yaml  mlp.yaml  svgd.yaml  vi.yaml
fpbnn/envs/: __init__.py  ant.py  densities.py  half_cheetah.py  inverted_double_pendulum.py  regression.py  sinusoids.py  swimmer.py
fpbnn/experiments/: README.md  main.py  run_leonhard.py  utils.py
fpbnn/hyperparameter_tuning/: main.py  run.py
fpbnn/models/: README.md  __init__.py  fsvgd.py  fvi.py  mlp.py  svgd.py  vi.py
fpbnn/modules/: abstract_regression.py  affine_transform.py  functional_regression.py  kernels.py  neural_network.py  prior_posterior.py  ssge.py  utils.py
fpbnn/pacoh_nn/: __init__.py  meta_algo.py  pacoh_nn_regression.py
modules/: batched_module.py  kernel.py  likelihood.py  neural_network.py  prior_posterior.py  prob_dist.py
src/fpbnn/: cli.py  configs.py  envs.py  models.py  modules.py  regression.py  (+3 more)
(+28 files in other folders)
